tests/baselines/reference/newExpressionWithCast.errors.txt
==== tests/cases/compiler/newExpressionWithCast.ts (4 errors) ====
    
    function Test() { }
    // valid but error with noImplicitAny
    var test = new Test();
               ~~~~~~~~~~
!!! error TS7009: 'new' expression, which lacks a constructor signature, implicitly has an 'any' type.
    
    function Test2() { }
    // parse error
    var test2 = new <any>Test2();
                    ~
!!! error TS1003: Identifier expected.
                ~~~~~~~~~~~~~~~~
!!! error TS2009: Operator '>' cannot be applied to types 'boolean' and 'void'.
                     ~~~
!!! error TS2095: Could not find symbol 'any'.
    
    function Test3() { }
    // valid with noImplicitAny
    var test3 = new (<any>Test3)();
    
    